fix: styling of player board is broken on wide screen

--- a/src/components/player-board/player-board.css
+++ b/src/components/player-board/player-board.css
@@ -25,6 +25,6 @@
 @media (min-width:961px) {
 	.player-boards {
 		display: flex;
+		justify-content: center;
 	}
-	
 }
